Made log output to the window appear drastically faster. Added JSON encode object to the log

--- a/VidCoder/View/LogWindow.xaml
+++ b/VidCoder/View/LogWindow.xaml
@@ -27,6 +27,7 @@
 						<Setter Property="Margin" Value="0" />
 					</Style>
 				</FlowDocument.Resources>
+				<Paragraph Name="logParagraph" />
 			</FlowDocument>
 		</RichTextBox>
 		<Button
