Added tooltip to explain behavior of preset choice in the Picker window.

--- a/VidCoder/View/PickerWindow.xaml
+++ b/VidCoder/View/PickerWindow.xaml
@@ -502,7 +502,7 @@
 					<!--  Encoding  -->
 					<TextBlock Style="{StaticResource ConfigSectionHeader}" Text="Encoding" />
 					<StackPanel Style="{StaticResource ConfigSectionStack}">
-						<StackPanel Orientation="Horizontal">
+						<StackPanel Orientation="Horizontal" ToolTip="{x:Static res:PickerRes.PresetOverrideToolTip}">
 							<CheckBox
 								VerticalAlignment="Center"
 								Content="Use preset:"
