--- a/VidCoder/View/MainWindow.xaml
+++ b/VidCoder/View/MainWindow.xaml
@@ -614,7 +614,9 @@
 						Height="22"
 						Margin="6,0,0,0"
 						VerticalAlignment="Center"
-						Value="{Binding ScanProgress}" />
+						Minimum="0"
+						Maximum="1"
+						Value="{Binding ScanProgressFraction}" />
 					<Button
 						Grid.Row="1"
 						Grid.Column="1"
