--- a/VidCoder/View/AddAutoPauseProcessDialog.xaml
+++ b/VidCoder/View/AddAutoPauseProcessDialog.xaml
@@ -1,52 +1,82 @@
-﻿<Window 
+﻿<Window
 	x:Class="VidCoder.View.AddAutoPauseProcessDialog"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:prop="clr-namespace:VidCoder.Properties"
-	xmlns:res="clr-namespace:VidCoder.Resources" 
-	Title="{x:Static res:MiscRes.AddAutoPauseProcessDialogTitle}" Height="371" Width="400" MinHeight="244" MinWidth="244" Closing="Window_Closing" WindowStartupLocation="CenterOwner"
-	TextOptions.TextFormattingMode="Display">
+	xmlns:res="clr-namespace:VidCoder.Resources"
+	Title="{x:Static res:MiscRes.AddAutoPauseProcessDialogTitle}"
+	Width="400"
+	Height="371"
+	MinWidth="244"
+	MinHeight="244"
+	TextOptions.TextFormattingMode="Display"
+	WindowStartupLocation="CenterOwner">
 	<Grid>
-		<Grid
-			Margin="7,12,12,0" VerticalAlignment="Top">
+		<Grid Margin="7,12,12,0" VerticalAlignment="Top">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="Auto" />
 				<ColumnDefinition />
 			</Grid.ColumnDefinitions>
-			<Label 
+			<Label
 				Grid.Column="0"
-				Content="{x:Static res:MiscRes.ProcessNameLabel}" HorizontalAlignment="Left" VerticalAlignment="Center" />
+				HorizontalAlignment="Left"
+				VerticalAlignment="Center"
+				Content="{x:Static res:MiscRes.ProcessNameLabel}" />
 			<TextBox
 				Grid.Column="1"
-				Height="23" VerticalAlignment="Center" VerticalContentAlignment="Center"
-				Text="{Binding ProcessName}"/>
+				Height="23"
+				VerticalAlignment="Center"
+				VerticalContentAlignment="Center"
+				Text="{Binding ProcessName}" />
 		</Grid>
-		
-		<TextBlock Height="23" Margin="12,55,12,0" Text="{x:Static res:MiscRes.ChooseFromProcessesLabel}" VerticalAlignment="Top" />
+
+		<TextBlock
+			Height="23"
+			Margin="12,55,12,0"
+			VerticalAlignment="Top"
+			Text="{x:Static res:MiscRes.ChooseFromProcessesLabel}" />
 		<ListBox
 			Margin="12,75,17,73"
 			ItemsSource="{Binding CurrentProcesses}"
 			SelectedItem="{Binding SelectedProcess}">
 			<ListBox.ItemContainerStyle>
-				<Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource {x:Type ListBoxItem}}">
-					<EventSetter Event="MouseDoubleClick" Handler="ListBoxItem_MouseDoubleClick"/>
+				<Style BasedOn="{StaticResource {x:Type ListBoxItem}}" TargetType="{x:Type ListBoxItem}">
+					<EventSetter Event="MouseDoubleClick" Handler="ListBoxItem_MouseDoubleClick" />
 				</Style>
 			</ListBox.ItemContainerStyle>
 
 		</ListBox>
 		<Button
-			Content="{x:Static res:MiscRes.RefreshButton}" Height="23" HorizontalAlignment="Left" Margin="12,0,0,44" VerticalAlignment="Bottom" MinWidth="75"
-			Command="{Binding RefreshCurrentProcessesCommand}"/>
+			Height="23"
+			MinWidth="75"
+			Margin="12,0,0,44"
+			HorizontalAlignment="Left"
+			VerticalAlignment="Bottom"
+			Command="{Binding RefreshCurrentProcessesCommand}"
+			Content="{x:Static res:MiscRes.RefreshButton}" />
 
 		<StackPanel
-			Orientation="Horizontal"
-			HorizontalAlignment="Right" Margin="0,0,12,12" VerticalAlignment="Bottom">
+			Margin="0,0,12,12"
+			HorizontalAlignment="Right"
+			VerticalAlignment="Bottom"
+			Orientation="Horizontal">
 			<Button
-				Height="23" HorizontalAlignment="Right" VerticalAlignment="Bottom" MinWidth="75" IsDefault="True"
-				Command="{Binding AcceptCommand}" Margin="0,0,6,0" Content="{x:Static res:MiscRes.AddButton}" />
+				Height="23"
+				MinWidth="75"
+				Margin="0,0,6,0"
+				HorizontalAlignment="Right"
+				VerticalAlignment="Bottom"
+				Command="{Binding AcceptCommand}"
+				Content="{x:Static res:MiscRes.AddButton}"
+				IsDefault="True" />
 			<Button
-				Height="23" HorizontalAlignment="Right" VerticalAlignment="Bottom" MinWidth="75" IsCancel="True"
-				Command="{Binding CancelCommand}" Content="{x:Static res:CommonRes.Cancel}" />
+				Height="23"
+				MinWidth="75"
+				HorizontalAlignment="Right"
+				VerticalAlignment="Bottom"
+				Command="{Binding CancelCommand}"
+				Content="{x:Static res:CommonRes.Cancel}"
+				IsCancel="True" />
 		</StackPanel>
 	</Grid>
 </Window>
