--- a/VidCoder/View/SubtitleDialog.xaml
+++ b/VidCoder/View/SubtitleDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window 
+﻿<Window
 	x:Class="VidCoder.View.SubtitleDialog"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,11 +7,16 @@
 	xmlns:prop="clr-namespace:VidCoder.Properties"
 	xmlns:res="clr-namespace:VidCoder.Resources"
 	xmlns:vm="clr-namespace:VidCoder.ViewModel"
-	Title="{x:Static res:SubtitleRes.SubtitlesWindowTitle}" Height="352" Width="572" MinWidth="430" MinHeight="250"
-	Style="{StaticResource NormalWindow}" WindowStartupLocation="CenterOwner"
+	Title="{x:Static res:SubtitleRes.SubtitlesWindowTitle}"
+	Width="572"
+	Height="352"
+	MinWidth="430"
+	MinHeight="250"
 	DataContextChanged="OnDataContextChanged"
-	Closing="Window_Closing" ShowInTaskbar="False"
-	TextOptions.TextFormattingMode="Display">
+	ShowInTaskbar="False"
+	Style="{StaticResource NormalWindow}"
+	TextOptions.TextFormattingMode="Display"
+	WindowStartupLocation="CenterOwner">
 	<Window.Resources>
 		<Style x:Key="SubtitleTrack" TargetType="TextBlock">
 			<Style.Triggers>
@@ -37,91 +42,118 @@
 				</Setter.Value>
 			</Setter>
 		</Style>
-		
+
 		<DataTemplate x:Key="SourceDragTemplate">
-			<TextBlock Text="{Binding SubtitleName, Mode=OneWay}" Background="White" />
+			<TextBlock Background="White" Text="{Binding SubtitleName, Mode=OneWay}" />
 		</DataTemplate>
 		<DataTemplate x:Key="SelectedTemplate">
 			<CheckBox
-				IsChecked="{Binding Selected}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-				Width="22" Height="22"
-				Style="{StaticResource CenteredCheckBox}"/>
+				Width="22"
+				Height="22"
+				HorizontalAlignment="Stretch"
+				VerticalAlignment="Stretch"
+				IsChecked="{Binding Selected}"
+				Style="{StaticResource CenteredCheckBox}" />
 		</DataTemplate>
 		<DataTemplate x:Key="NameTemplate">
 			<Grid Height="22">
 				<TextBlock
-					Text="{Binding SubtitleName}" VerticalAlignment="Center"
-					Style="{StaticResource SubtitleTrack}"/>
+					VerticalAlignment="Center"
+					Style="{StaticResource SubtitleTrack}"
+					Text="{Binding SubtitleName}" />
 			</Grid>
 		</DataTemplate>
 		<DataTemplate x:Key="ForcedTemplate">
-			<CheckBox 
-				IsChecked="{Binding ForcedOnly}" ToolTip="{x:Static res:CommonRes.ForcedSubtitleToolTip}"
-				Visibility="{Binding Selected, Converter={StaticResource VisibilityConverter}}"
+			<CheckBox
+				Width="75"
+				Height="22"
+				IsChecked="{Binding ForcedOnly}"
 				IsEnabled="{Binding ForcedOnlyEnabled}"
-				Width="75" Height="22"
-				Style="{StaticResource CenteredCheckBox}"/>
+				Style="{StaticResource CenteredCheckBox}"
+				ToolTip="{x:Static res:CommonRes.ForcedSubtitleToolTip}"
+				Visibility="{Binding Selected,
+			                               Converter={StaticResource VisibilityConverter}}" />
 		</DataTemplate>
 		<DataTemplate x:Key="BurnedInTemplate">
 			<CheckBox
+				Width="70"
+				Height="22"
 				IsChecked="{Binding BurnedIn}"
+				IsEnabled="{Binding BurnedInEnabled}"
+				Style="{StaticResource CenteredCheckBox}"
 				ToolTip="{x:Static res:CommonRes.BurnedSubtitleToolTip}"
 				ToolTipService.ShowOnDisabled="True"
-				Visibility="{Binding Selected, Converter={StaticResource VisibilityConverter}}"
-				IsEnabled="{Binding BurnedInEnabled}"
-				Width="70" Height="22"
-				Style="{StaticResource CenteredCheckBox}"/>
+				Visibility="{Binding Selected,
+			                               Converter={StaticResource VisibilityConverter}}" />
 		</DataTemplate>
 		<DataTemplate x:Key="SrtDragTemplate">
 			<TextBox Text="{Binding FileName, Mode=OneWay}" />
 		</DataTemplate>
 		<DataTemplate x:Key="FileNameTemplate">
-			<TextBlock Text="{Binding FileName}" TextTrimming="CharacterEllipsis" ToolTipService.ToolTip="{Binding FileName}" MaxWidth="350" />
+			<TextBlock
+				MaxWidth="350"
+				Text="{Binding FileName}"
+				TextTrimming="CharacterEllipsis"
+				ToolTipService.ToolTip="{Binding FileName}" />
 		</DataTemplate>
 		<DataTemplate x:Key="DefaultTemplate">
 			<CheckBox
+				Width="55"
+				Height="22"
 				IsChecked="{Binding Default}"
 				IsEnabled="{Binding SubtitleDialogViewModel.DefaultsEnabled}"
+				Style="{StaticResource CenteredCheckBox}"
 				ToolTip="{x:Static res:CommonRes.DefaultSubtitleToolTip}"
 				ToolTipService.ShowOnDisabled="True"
-				Visibility="{Binding Selected, Converter={StaticResource VisibilityConverter}}"
-				Width="55" Height="22"
-				Style="{StaticResource CenteredCheckBox}">
-
-			</CheckBox>
+				Visibility="{Binding Selected,
+			                               Converter={StaticResource VisibilityConverter}}" />
 		</DataTemplate>
 		<DataTemplate x:Key="LanguageTemplate">
 			<ComboBox
 				Width="80"
-				ItemsSource="{Binding Languages}" SelectedValue="{Binding LanguageCode}"
-				DisplayMemberPath="Display" SelectedValuePath="Code" />
+				DisplayMemberPath="Display"
+				ItemsSource="{Binding Languages}"
+				SelectedValue="{Binding LanguageCode}"
+				SelectedValuePath="Code" />
 		</DataTemplate>
 		<DataTemplate x:Key="CharCodeTemplate">
 			<ComboBox
-				ItemsSource="{Binding CharCodes}" SelectedItem="{Binding CharacterCode}"
+				ItemsSource="{Binding CharCodes}"
+				SelectedItem="{Binding CharacterCode}"
 				Style="{StaticResource SubtitleControl}" />
 		</DataTemplate>
 		<DataTemplate x:Key="OffsetTemplate">
 			<HandBrakeControls:NumberBox
-				Width="40" Height="22"
-				Number="{Binding Offset, Mode=TwoWay}" AllowEmpty="False"
-				ToolTip="{x:Static res:CommonRes.OffsetSubtitleToolTip}"/>
+				Width="40"
+				Height="22"
+				AllowEmpty="False"
+				Number="{Binding Offset,
+			                                              Mode=TwoWay}"
+				ToolTip="{x:Static res:CommonRes.OffsetSubtitleToolTip}" />
 		</DataTemplate>
 		<DataTemplate x:Key="RemoveTemplate">
-			<Button 
-				Command="{Binding RemoveSubtitleCommand}" VerticalAlignment="Center" Style="{StaticResource RemoveButtonStyle}"
-				Content="{x:Static res:SubtitleRes.RemoveSubtitleTrack}" />
+			<Button
+				VerticalAlignment="Center"
+				Command="{Binding RemoveSubtitleCommand}"
+				Content="{x:Static res:SubtitleRes.RemoveSubtitleTrack}"
+				Style="{StaticResource RemoveButtonStyle}" />
 		</DataTemplate>
 		<DataTemplate x:Key="RemoveDuplicateTemplate" DataType="vm:SourceSubtitleViewModel">
 			<Grid>
-				<Button 
-					Command="{Binding RemoveSubtitleCommand}" VerticalAlignment="Center" Style="{StaticResource RemoveButtonStyle}"
-					Content="{x:Static res:SubtitleRes.RemoveSubtitleTrack}"
-					Visibility="{Binding RemoveVisible, Converter={StaticResource VisibilityConverter}}"/>
 				<Button
-					Command="{Binding DuplicateSubtitleCommand}" VerticalContentAlignment="Center" Style="{StaticResource AddButtonStyle}"
+					VerticalAlignment="Center"
+					Command="{Binding RemoveSubtitleCommand}"
+					Content="{x:Static res:SubtitleRes.RemoveSubtitleTrack}"
+					Style="{StaticResource RemoveButtonStyle}"
+					Visibility="{Binding RemoveVisible,
+				                             Converter={StaticResource VisibilityConverter}}" />
+				<Button
+					VerticalContentAlignment="Center"
+					Command="{Binding DuplicateSubtitleCommand}"
 					Content="{x:Static res:SubtitleRes.DuplicateSubtitleTrack}"
-					Visibility="{Binding DuplicateVisible, Converter={StaticResource VisibilityConverter}}"/>
+					Style="{StaticResource AddButtonStyle}"
+					Visibility="{Binding DuplicateVisible,
+				                             Converter={StaticResource VisibilityConverter}}" />
 			</Grid>
 		</DataTemplate>
 	</Window.Resources>
@@ -137,43 +169,61 @@
 					<RowDefinition Height="Auto" MinHeight="71" />
 					<RowDefinition Height="*" />
 				</Grid.RowDefinitions>
-				<Label Height="28" HorizontalAlignment="Left" VerticalAlignment="Top" Content="{x:Static res:SubtitleRes.SubtitlesFromSourceLabel}" />
-				<StackPanel Orientation="Vertical" Margin="12,24,12,4">
-					<ListView 
-						VerticalAlignment="Top" Margin="0,0,0,0" UseLayoutRounding="True"
-						ItemsSource="{Binding SourceSubtitles}" Visibility="{Binding HasSourceSubtitles, Converter={StaticResource VisibilityConverter}}"
-						HandBrakeDragDrop:DragDropHelper.IsDragSource="True" HandBrakeDragDrop:DragDropHelper.IsDropTarget="True" HandBrakeDragDrop:DragDropHelper.DragDropTemplate="{StaticResource SourceDragTemplate}">
+				<Label
+					Height="28"
+					HorizontalAlignment="Left"
+					VerticalAlignment="Top"
+					Content="{x:Static res:SubtitleRes.SubtitlesFromSourceLabel}" />
+				<StackPanel Margin="12,24,12,4" Orientation="Vertical">
+					<ListView
+						Margin="0,0,0,0"
+						VerticalAlignment="Top"
+						HandBrakeDragDrop:DragDropHelper.DragDropTemplate="{StaticResource SourceDragTemplate}"
+						HandBrakeDragDrop:DragDropHelper.IsDragSource="True"
+						HandBrakeDragDrop:DragDropHelper.IsDropTarget="True"
+						ItemsSource="{Binding SourceSubtitles}"
+						UseLayoutRounding="True"
+						Visibility="{Binding HasSourceSubtitles,
+					                               Converter={StaticResource VisibilityConverter}}">
 						<ListView.ItemContainerStyle>
 							<Style TargetType="{x:Type ListViewItem}">
-								<EventSetter Event="MouseLeftButtonUp" Handler="SourceItemClick"/>
+								<EventSetter Event="MouseLeftButtonUp" Handler="SourceItemClick" />
 							</Style>
 						</ListView.ItemContainerStyle>
 						<ListView.View>
 							<GridView>
 								<GridView.Columns>
 									<GridViewColumn CellTemplate="{StaticResource SelectedTemplate}" />
-									<GridViewColumn Header="{x:Static res:SubtitleRes.NameColumn}" CellTemplate="{StaticResource NameTemplate}" x:Name="nameColumn" />
-									<GridViewColumn CellTemplate="{StaticResource DefaultTemplate}" x:Name="sourceDefaultColumn">
-										<GridViewColumn.Header>
-											<TextBlock 
-												Text="{x:Static res:SubtitleRes.DefaultColumn}" ToolTip="{x:Static res:CommonRes.DefaultSubtitleToolTip}" 
-												MinWidth="70" TextAlignment="Center" />
-										</GridViewColumn.Header>
-									</GridViewColumn>
-									<GridViewColumn CellTemplate="{StaticResource ForcedTemplate}" x:Name="sourceForcedColumn">
-										<GridViewColumn.Header>
-											<TextBlock 
-												Text="{x:Static res:SubtitleRes.ForcedOnlyColumn}" ToolTip="{x:Static res:CommonRes.ForcedSubtitleToolTip}"
-												MinWidth="85" TextAlignment="Center"/>
-										</GridViewColumn.Header>
-									</GridViewColumn>
-									<GridViewColumn CellTemplate="{StaticResource BurnedInTemplate}" x:Name="sourceBurnedColumn">
+									<GridViewColumn
+										x:Name="nameColumn"
+										CellTemplate="{StaticResource NameTemplate}"
+										Header="{x:Static res:SubtitleRes.NameColumn}" />
+									<GridViewColumn x:Name="sourceDefaultColumn" CellTemplate="{StaticResource DefaultTemplate}">
 										<GridViewColumn.Header>
 											<TextBlock
+												MinWidth="70"
+												Text="{x:Static res:SubtitleRes.DefaultColumn}"
+												TextAlignment="Center"
+												ToolTip="{x:Static res:CommonRes.DefaultSubtitleToolTip}" />
+										</GridViewColumn.Header>
+									</GridViewColumn>
+									<GridViewColumn x:Name="sourceForcedColumn" CellTemplate="{StaticResource ForcedTemplate}">
+										<GridViewColumn.Header>
+											<TextBlock
+												MinWidth="85"
+												Text="{x:Static res:SubtitleRes.ForcedOnlyColumn}"
+												TextAlignment="Center"
+												ToolTip="{x:Static res:CommonRes.ForcedSubtitleToolTip}" />
+										</GridViewColumn.Header>
+									</GridViewColumn>
+									<GridViewColumn x:Name="sourceBurnedColumn" CellTemplate="{StaticResource BurnedInTemplate}">
+										<GridViewColumn.Header>
+											<TextBlock
+												MinWidth="80"
 												Text="{x:Static res:SubtitleRes.BurnedInColumn}"
+												TextAlignment="Center"
 												ToolTip="{x:Static res:CommonRes.BurnedSubtitleToolTip}"
-												ToolTipService.ShowOnDisabled="True"
-												MinWidth="80" TextAlignment="Center"/>
+												ToolTipService.ShowOnDisabled="True" />
 										</GridViewColumn.Header>
 									</GridViewColumn>
 									<GridViewColumn CellTemplate="{StaticResource RemoveDuplicateTemplate}" />
@@ -183,53 +233,93 @@
 					</ListView>
 					<HandBrakeControls:InlineWarning
 						Margin="0,6,0,0"
-						WarningText="{x:Static res:SubtitleRes.QuickTimeSubtitlesWarning}"
-						Visibility="{Binding TextSubtitleWarningVisibile, Converter={StaticResource VisibilityConverter}}"/>
+						Visibility="{Binding TextSubtitleWarningVisibile,
+					                                                      Converter={StaticResource VisibilityConverter}}"
+						WarningText="{x:Static res:SubtitleRes.QuickTimeSubtitlesWarning}" />
 				</StackPanel>
 
 
-				<Label Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Content="{x:Static res:SubtitleRes.ExternalSubtitlesLabel}" />
+				<Label
+					Grid.Row="1"
+					HorizontalAlignment="Left"
+					VerticalAlignment="Top"
+					Content="{x:Static res:SubtitleRes.ExternalSubtitlesLabel}" />
 
-				<StackPanel Orientation="Vertical" Margin="12,24,12,4" Grid.Row="1">
-					<ListView VerticalAlignment="Top" Margin="0,0,0,5"
-						ItemsSource="{Binding SrtSubtitles}" Visibility="{Binding HasSrtSubtitles, Converter={StaticResource VisibilityConverter}}"
-						HandBrakeDragDrop:DragDropHelper.IsDragSource="True" HandBrakeDragDrop:DragDropHelper.IsDropTarget="True" HandBrakeDragDrop:DragDropHelper.DragDropTemplate="{StaticResource SrtDragTemplate}">
+				<StackPanel
+					Grid.Row="1"
+					Margin="12,24,12,4"
+					Orientation="Vertical">
+					<ListView
+						Margin="0,0,0,5"
+						VerticalAlignment="Top"
+						HandBrakeDragDrop:DragDropHelper.DragDropTemplate="{StaticResource SrtDragTemplate}"
+						HandBrakeDragDrop:DragDropHelper.IsDragSource="True"
+						HandBrakeDragDrop:DragDropHelper.IsDropTarget="True"
+						ItemsSource="{Binding SrtSubtitles}"
+						Visibility="{Binding HasSrtSubtitles,
+					                               Converter={StaticResource VisibilityConverter}}">
 						<ListView.View>
 							<GridView>
 								<GridView.Columns>
-									<GridViewColumn Header="{x:Static res:SubtitleRes.FileColumn}" CellTemplate="{StaticResource FileNameTemplate}" />
-									<GridViewColumn Header="{x:Static res:SubtitleRes.DefaultColumn}" CellTemplate="{StaticResource DefaultTemplate}" />
-									<GridViewColumn Header="{x:Static res:SubtitleRes.BurnedInColumn}" CellTemplate="{StaticResource BurnedInTemplate}" />
-									<GridViewColumn Header="{x:Static res:SubtitleRes.LanguageColumn}" CellTemplate="{StaticResource LanguageTemplate}" x:Name="srtLanguageColumn"  />
-									<GridViewColumn Header="{x:Static res:SubtitleRes.CharCodeColumn}" CellTemplate="{StaticResource CharCodeTemplate}" x:Name="srtCharCodeColumn" />
-									<GridViewColumn Header="{x:Static res:SubtitleRes.OffsetColumn}" CellTemplate="{StaticResource OffsetTemplate}" />
+									<GridViewColumn CellTemplate="{StaticResource FileNameTemplate}" Header="{x:Static res:SubtitleRes.FileColumn}" />
+									<GridViewColumn CellTemplate="{StaticResource DefaultTemplate}" Header="{x:Static res:SubtitleRes.DefaultColumn}" />
+									<GridViewColumn CellTemplate="{StaticResource BurnedInTemplate}" Header="{x:Static res:SubtitleRes.BurnedInColumn}" />
+									<GridViewColumn
+										x:Name="srtLanguageColumn"
+										CellTemplate="{StaticResource LanguageTemplate}"
+										Header="{x:Static res:SubtitleRes.LanguageColumn}" />
+									<GridViewColumn
+										x:Name="srtCharCodeColumn"
+										CellTemplate="{StaticResource CharCodeTemplate}"
+										Header="{x:Static res:SubtitleRes.CharCodeColumn}" />
+									<GridViewColumn CellTemplate="{StaticResource OffsetTemplate}" Header="{x:Static res:SubtitleRes.OffsetColumn}" />
 									<GridViewColumn CellTemplate="{StaticResource RemoveTemplate}" />
 								</GridView.Columns>
 							</GridView>
 						</ListView.View>
 					</ListView>
-					<Button 
-						Grid.Row="1" Command="{Binding AddSrtSubtitleCommand}" Height="23" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Bottom" Padding="6,0"
-						Content="{x:Static res:SubtitleRes.ImportSrtButton}" />
+					<Button
+						Grid.Row="1"
+						Height="23"
+						Margin="0"
+						HorizontalAlignment="Left"
+						VerticalAlignment="Bottom"
+						Command="{Binding AddSrtSubtitleCommand}"
+						Content="{x:Static res:SubtitleRes.ImportSrtButton}"
+						Padding="6,0" />
 					<HandBrakeControls:InlineWarning
 						Margin="0,6,0,0"
-						WarningText="{x:Static res:SubtitleRes.BurnedOverlapWarning}"
-						Visibility="{Binding BurnedOverlapWarningVisible, Converter={StaticResource VisibilityConverter}}"/>
+						Visibility="{Binding BurnedOverlapWarningVisible,
+					                                                      Converter={StaticResource VisibilityConverter}}"
+						WarningText="{x:Static res:SubtitleRes.BurnedOverlapWarning}" />
 				</StackPanel>
 
 			</Grid>
 		</ScrollViewer>
 
 		<StackPanel
-			Orientation="Horizontal"
-			HorizontalAlignment="Right" Margin="0,0,6,6" VerticalAlignment="Bottom"
-			Grid.Row="1">
+			Grid.Row="1"
+			Margin="0,0,6,6"
+			HorizontalAlignment="Right"
+			VerticalAlignment="Bottom"
+			Orientation="Horizontal">
 			<Button
-				Height="23" HorizontalAlignment="Right" VerticalAlignment="Bottom" MinWidth="75" IsDefault="True"
-				Command="{Binding AcceptCommand}" Margin="0,0,6,0" Content="{x:Static res:CommonRes.Ok}" />
+				Height="23"
+				MinWidth="75"
+				Margin="0,0,6,0"
+				HorizontalAlignment="Right"
+				VerticalAlignment="Bottom"
+				Command="{Binding AcceptCommand}"
+				Content="{x:Static res:CommonRes.Ok}"
+				IsDefault="True" />
 			<Button
-				Height="23" HorizontalAlignment="Right" VerticalAlignment="Bottom" MinWidth="75" IsCancel="True"
-				Command="{Binding CancelCommand}" Content="{x:Static res:CommonRes.Cancel}" />
+				Height="23"
+				MinWidth="75"
+				HorizontalAlignment="Right"
+				VerticalAlignment="Bottom"
+				Command="{Binding CancelCommand}"
+				Content="{x:Static res:CommonRes.Cancel}"
+				IsCancel="True" />
 		</StackPanel>
 	</Grid>
 </Window>
